# rise-scout

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: compute-stack.ts  data-stack.ts  network-stack.ts
cdk/lib/constructs/: lambda-functions.ts  lambda-layers.ts
config/: opensearch_mappings.json  scoring_weights.json
src/lambdas/card_refresh/: handler.py
src/lambdas/contact_consumer/: handler.py
src/lambdas/listing_consumer/: handler.py
src/lambdas/score_decay/: handler.py
src/rise_scout/: settings.py
src/rise_scout/application/: card_refresh.py  contact_ingestion.py  event_handlers.py  listing_matching.py  score_decay.py
src/rise_scout/domain/cards/: __init__.py  llm_service.py  models.py  repository.py
src/rise_scout/domain/contact/: __init__.py  models.py  parsers.py  repository.py
src/rise_scout/domain/embeddings/: __init__.py  service.py
src/rise_scout/domain/scoring/: __init__.py  decay.py  engine.py  signals.py  weights.py
src/rise_scout/domain/search/: __init__.py  models.py  parsers.py  repository.py
src/rise_scout/domain/shared/: __init__.py  events.py  (+3 more)
src/rise_scout/infrastructure/: container.py
tests/: conftest.py
tests/integration/: test_dynamodb_card_repo.py  test_redis.py  test_scoring_flow.py
tests/unit/application/: test_contact_ingestion.py  test_listing_matching.py
tests/unit/domain/: test_contact_model.py  test_decay.py  test_scoring_engine.py
tests/unit/infrastructure/: test_parsers.py  test_serializers.py
(+13 files in other folders)
