[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rise-scout"
version = "0.1.0"
description = "Contact Intelligence & MLS Search Platform for MoxiWorks/RISE"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "opensearch-py>=2.4,<3",
    "requests-aws4auth>=1.2,<2",
    "boto3>=1.34,<2",
    "redis>=5.0,<6",
    "aws-lambda-powertools>=3.0,<4",
    "structlog>=24.1,<25",
    "orjson>=3.9,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "moto[dynamodb]>=5.0,<6",
    "fakeredis>=2.21,<3",
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
    "boto3-stubs[dynamodb,bedrock-runtime]>=1.34,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rise_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
